--- a/etp/src/app/snippets/partials/sidebar/sidebar.component.scss
+++ b/etp/src/app/snippets/partials/sidebar/sidebar.component.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   i {
     padding: 0 20px;
