--- a/etp/src/app/snippets/partials/stickybar/stickybar.component.html
+++ b/etp/src/app/snippets/partials/stickybar/stickybar.component.html
@@ -49,7 +49,7 @@
   [class.right]="battery"
   style="top: calc(40% + 150px);"
 >
-  <div class="item">
+  <div class="item" style="background-color: #3e4e6c;">
     <div class="progress">
       <div
         class="progress-bar bg-primary"
