--- a/etp/src/app/dashboard/e-market/e-market.component.html
+++ b/etp/src/app/dashboard/e-market/e-market.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    <div class="card dash-card shadow-sm">
+    <div class="card dash-card shadow">
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-borderless table-vertical-center">
