--- a/etp/src/app/dashboard/nav/nav.component.html
+++ b/etp/src/app/dashboard/nav/nav.component.html
@@ -2,12 +2,12 @@
   <!-- Sidebar  -->
   <etp-side></etp-side>
   <!-- end of side  -->
-  <etp-topbar></etp-topbar>
+
   <div id="content" [class]="set.sidetoggle">
-    <div id="dashcomps">
-      <div>
-        <router-outlet></router-outlet>
-      </div>
+    <etp-topbar></etp-topbar>
+
+    <div id="dashcomps" class="mx-auto">
+      <router-outlet></router-outlet>
     </div>
     <etp-stickybar *ngIf="set.isTablet$ | async"></etp-stickybar>
   </div>
