--- a/etp/src/app/dashboard/nodes/nodes.component.html
+++ b/etp/src/app/dashboard/nodes/nodes.component.html
@@ -1,7 +1,7 @@
 <div class="wrap">
   <div class="container">
     <h2 class="dash-title">Solar Nodes</h2>
-    <div class="card dash-card">
+    <div class="card dash-card shadow">
       <div class="card-body">
         <h4 class="card-title">Title</h4>
         <p class="card-text">Text</p>
