--- a/etp/src/app/snippets/partials/stickybar/stickybar.component.html
+++ b/etp/src/app/snippets/partials/stickybar/stickybar.component.html
@@ -41,7 +41,7 @@
   style="top: calc(40% + 100px);"
 >
   <div class="item">
-    <div class="quota">2.6 <span>KWH</span></div>
+    <div class="quota">{{ data?.pv }} <span>KWH</span></div>
   </div>
 </div>
 <div
