--- a/etp/src/app/auth/signin/signin.component.scss
+++ b/etp/src/app/auth/signin/signin.component.scss
@@ -4,20 +4,27 @@
 }
 p {
   font-size: 2.3vh;
-}
-
-span {
-  font-size: 2.2vh;
-  font-weight: 500;
-  &:hover {
-    transition: ease-in-out 0.2s;
-    font-size: 2.5vh;
+  span {
+    font-size: 2.2vh;
+    font-weight: 500;
+    &:hover {
+      transition: ease-in-out 0.2s;
+      font-size: 2.5vh;
+    }
   }
 }
+
 .info {
   color: #888;
   margin: 5vh;
   font-size: 2.2vh;
   line-height: 1.5;
   font-weight: 400;
+}
+.alert {
+  margin: 0px 10vw 20px;
+  text-align: center;
+}
+.error {
+  width: 100%;
 }
