--- a/etp/src/app/auth/signup/signup.component.scss
+++ b/etp/src/app/auth/signup/signup.component.scss
@@ -1,7 +1,9 @@
 @import "../signin/signin.component.scss";
+@import "../../../variables.scss";
 
 .forgot {
   width: 70%;
+  margin: auto 0 !important;
   p {
     margin: 3vh 0 !important;
     text-align: center;
@@ -13,4 +15,19 @@
   .forgot {
     width: 100vw;
   }
+}
+.mail {
+  width: 300px;
+  margin: 5px auto 0;
+}
+.confirm-title {
+  font-size: 20px;
+  font-weight: 500;
+  color: $grey;
+}
+.confirm-sub {
+  font-weight: 300;
+  font-size: 18px;
+  color: $darkbg;
+  line-height: 1.5;
 }
