--- a/etp/src/app/snippets/partials/profilebar/profilebar.component.html
+++ b/etp/src/app/snippets/partials/profilebar/profilebar.component.html
@@ -24,7 +24,7 @@
     >
   </div>
   <div class="item" [matMenuTriggerFor]="userMenu">
-    <span class="tabs ml-auto">Hi, Username</span>
+    <span class="tabs ml-auto">Hi, {{ data?.surname }}</span>
   </div>
   <div class="item" [matMenuTriggerFor]="langMenu" style="line-height: 1;">
     <div style="width: 30px; margin: auto 3px;">
@@ -37,8 +37,12 @@
 <!-- drop downs  -->
 
 <mat-menu #userMenu="matMenu" class="menu">
-  <button mat-menu-item>Settings</button>
-  <button mat-menu-item>Help</button>
+  <button mat-menu-item>
+    <i class="fa fa-cog pr-2" aria-hidden="true"></i> Settings
+  </button>
+  <button mat-menu-item (click)="logout()">
+    <i class="fas fa-sign-out-alt pr-2"></i> Logout
+  </button>
 </mat-menu>
 <mat-menu #notifMenu="matMenu" class="menu">
   <button mat-menu-item>Settings</button>
