--- a/etp/src/app/snippets/partials/sidebar/sidebar.component.scss
+++ b/etp/src/app/snippets/partials/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../variables.scss";
 
 #sidebar {
-  width: 270px;
+  width: 300px;
   background: $bg2;
   transition: all 0.3s;
   height: 100vh;
@@ -11,7 +11,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   i {
-    padding: 0 20px;
+    padding: 0 30px;
   }
   .etp {
     padding: 0 20px;
@@ -45,7 +45,7 @@
   border-radius: 10px;
 }
 #sidebar.active {
-  margin-left: -270px;
+  margin-left: -300px;
 }
 
 #sidebar .sidebar-header {
@@ -54,6 +54,7 @@
   text-align: center;
   cursor: pointer;
   width: 137px;
+  height: 137px;
   margin: auto;
   > a {
     color: $secondary;
@@ -66,20 +67,24 @@
       font-size: 14px;
     }
   }
+  .img-fluid {
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
 #sidebar ul.components {
-  padding: 30px 0 10px;
+  padding: 50px 0 10px;
 }
 
 #sidebar ul li a {
   color: $sidetext;
-  padding: 15px 20px;
+  padding: 18px 20px;
   display: block;
   font-size: 1rem;
   font-weight: 300;
   cursor: pointer;
-  margin: 7px 30px 7px 0;
+  margin: 10px 30px 10px 0;
 }
 
 #sidebarCollapse {
@@ -97,7 +102,7 @@
 
 @media (max-width: 1050px) {
   #sidebar {
-    margin-left: -270px;
+    margin-left: -300px;
     position: fixed;
     z-index: 99999;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
