--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -59,7 +59,7 @@ $enable-grid-classes: false;
 $primary: #1f8efa;
 $secondary: #657d95;
 $success: #05c985;
-$danger: #dc3545;
+$danger: #ee423d;
 $info: #17a2b8;
 $warning: #ffab4f;
 $light: #f8f9fa;
