--- a/etp/src/app/dashboard/analytics/analytics.component.html
+++ b/etp/src/app/dashboard/analytics/analytics.component.html
@@ -27,22 +27,42 @@
             <div class="mb-3">
               <ul class="nav justify-content-end">
                 <li class="nav-item">
-                  <button mat-button class="nav-link text-secondary">
+                  <button
+                    mat-button
+                    class="nav-link text-secondary"
+                    [class.active]="day"
+                    (click)="day = true; month = year = week = !day"
+                  >
                     DAY
                   </button>
                 </li>
                 <li class="nav-item">
-                  <button mat-button class="nav-link text-secondary active">
+                  <button
+                    mat-button
+                    class="nav-link text-secondary"
+                    [class.active]="week"
+                    (click)="week = true; month = year = day = !week"
+                  >
                     WEEK
                   </button>
                 </li>
                 <li class="nav-item">
-                  <button mat-button class="nav-link text-secondary">
+                  <button
+                    mat-button
+                    class="nav-link text-secondary"
+                    [class.active]="month"
+                    (click)="month = true; day = year = week = !month"
+                  >
                     MONTH
                   </button>
                 </li>
                 <li class="nav-item">
-                  <button mat-button class="nav-link text-secondary">
+                  <button
+                    mat-button
+                    class="nav-link text-secondary"
+                    [class.active]="year"
+                    (click)="year = true; month = day = week = !year"
+                  >
                     YEAR
                   </button>
                 </li>
