--- a/etp/src/app/auth/authhome/authhome.component.html
+++ b/etp/src/app/auth/authhome/authhome.component.html
@@ -23,7 +23,7 @@
             class="img-fluid"
         /></a>
       </div>
-      <div class="my-auto">
+      <div class="top">
         <router-outlet></router-outlet>
       </div>
     </div>
