--- a/etp/src/app/auth/signin/signin.component.scss
+++ b/etp/src/app/auth/signin/signin.component.scss
@@ -16,10 +16,10 @@ p {
 
 .info {
   color: #888;
-  margin: 5vh;
+  margin: 5vh auto;
   font-size: 2.2vh;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 300;
 }
 .alert {
   margin: 0px 10vw 20px;
