--- a/etp/src/app/snippets/dashboard-nav/sidebar/sidebar.component.html
+++ b/etp/src/app/snippets/dashboard-nav/sidebar/sidebar.component.html
@@ -18,14 +18,14 @@
       routerLink="/dashboard/overview"
       routerLinkActive="active"
     >
-      <a> <i class="fa fa-home" aria-hidden="true"></i> Overview</a>
+      <a> <i class="icon-home" aria-hidden="true"></i> Overview</a>
     </li>
     <li
       (click)="set.dismiss()"
       routerLink="/dashboard/energy-market"
       routerLinkActive="active"
     >
-      <a> <i class="fa fa-cart-plus" aria-hidden="true"></i> Energy Market </a>
+      <a> <i class="icon-energy" aria-hidden="true"></i> Energy Market </a>
     </li>
     <li
       (click)="set.dismiss()"
@@ -53,7 +53,7 @@
       routerLink="/dashboard/settings"
       routerLinkActive="active"
     >
-      <a> <i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+      <a> <i class="icon-settings" aria-hidden="true"></i> Settings</a>
     </li>
     <li
       (click)="set.dismiss()"
