--- a/etp/src/app/auth/authhome/authhome.component.scss
+++ b/etp/src/app/auth/authhome/authhome.component.scss
@@ -1,7 +1,25 @@
+.auth-side {
+  background-image: url(/assets/img/bitmap.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  box-shadow: inset 0 0 0 2000px #2f3b52e1;
+  // width: 100%;
+  margin: 0 -15px;
+}
+
+.auth-logo {
+  width: 20vh;
+  margin: 30px auto;
+  max-height: 100vh;
+}
+
 .row {
   margin: auto 0 !important;
   flex-wrap: nowrap;
 }
+
 .authbox {
   padding: calc(50vh - 7%) calc(70vw - 110%) 0;
   .title {
@@ -13,4 +31,8 @@
       font-weight: 300;
     }
   }
+}
+
+.top {
+  margin: 8vh auto;
 }
