--- a/etp/src/app/dashboard/settings/settings.component.html
+++ b/etp/src/app/dashboard/settings/settings.component.html
@@ -1,10 +1,40 @@
 <div class="wrap">
   <div class="container">
-    <h2 class="dash-title">Settings</h2>
-    <div class="card dash-card shadow">
-      <div class="card-body">
-        <h4 class="card-title">Title</h4>
-        <p class="card-text">Text</p>
+    <div class="">
+      <div class="row">
+        <div class="col">
+          <h2 class="dash-title">Settings</h2>
+        </div>
+        <div class="col mt-auto mb-3 d-flex justify-content-end">
+          <div
+            ngbDropdown
+            class="ml-auto justify-content-end"
+            [class.text-center]="set.isHandset$ | async"
+          >
+            <span class="text-white mr-2"> Sort by</span>
+            <button class="toggle" id="dropdownBasic1" ngbDropdownToggle>
+              Category &nbsp; &nbsp; &nbsp;
+            </button>
+            <div
+              ngbDropdownMenu
+              aria-labelledby="dropdownBasic1"
+              class="bg-dark menu"
+            >
+              <button ngbDropdownItem>Warnings</button>
+              <button ngbDropdownItem>Updates</button>
+              <button ngbDropdownItem>Settings</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row w-100">
+      <div class="col-md-3">
+        <device-settings></device-settings>
+      </div>
+      <div class="col-md-9">
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
