--- a/etp/src/app/snippets/dashboard-nav/profilebar/profilebar.component.scss
+++ b/etp/src/app/snippets/dashboard-nav/profilebar/profilebar.component.scss
@@ -14,7 +14,7 @@
     height: 30px;
     line-height: 1;
     &:hover {
-      background-color: $primary !important;
+      background-color: $bg1 !important;
     }
   }
 }
