--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -98,86 +98,7 @@ body {
   left: 0px !important;
 }
 
-// --- Home styling ---
-.home-wrapper {
-  background: $big-bg;
-  min-height: 100vh;
-  color: #fff;
-  max-width: 100%;
-  .heading {
-    margin-left: 5vw;
-    margin-top: 10vh;
-    padding: 20px 0;
-    .title {
-      font-size: 5.6vh;
-      font-weight: 400;
-      line-height: 1;
-      margin-top: 3%;
-      text-shadow: 4px 4px 0px #0c1425, 7px 7px 0px rgba(0, 0, 0, 0.84);
-    }
-    p {
-      font-size: 2vh;
-      color: #aaa;
-      font-weight: 300;
-    }
-  }
-
-  .line-chart {
-    margin: 3vh -5vh 0;
-    img {
-      padding: 10px;
-    }
-  }
-  .top-btn {
-    margin: 20px auto;
-    position: absolute;
-    right: 0;
-    z-index: 1;
-    .span {
-      margin-right: 1vw;
-      font-weight: 400;
-      font-size: 2.5vh;
-      sup,
-      sub {
-        color: #70889e;
-        font-weight: 300;
-      }
-    }
-    .btn {
-      height: 4vh;
-      width: 20vh;
-      padding: 5px 10px;
-      margin: auto 7px;
-    }
-  }
-  .bar-pic {
-    width: 40vh;
-    margin-top: 5vh;
-  }
-  img {
-    border-radius: 5px;
-  }
-}
-// --- End of Home  ---
-
 // --- Auth Styling ---
-
-.auth-side {
-  background-image: url(/assets/img/bitmap.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  box-shadow: inset 0 0 0 2000px #2f3b52e1;
-  // width: 100%;
-  margin: 0 -15px;
-}
-
-.auth-logo {
-  width: 20vh;
-  margin: 30px auto;
-  max-height: 100vh;
-}
 
 .wrapper {
   margin: 5vh auto 10px;
@@ -193,7 +114,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 7vh 0;
+  margin: 5vh 0 10px;
   label {
     font-weight: 500;
   }
@@ -217,12 +138,16 @@ body {
   }
 }
 .forgot {
-  margin: auto 7vw;
+  margin: auto 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   p {
     cursor: pointer;
-    margin: 5vh 0 0;
+    margin: 10px auto;
     color: $bg1;
+    text-align: center;
     line-height: 1.2;
     &:hover {
       color: $primary;
@@ -236,6 +161,7 @@ body {
   span {
     color: $primary !important;
     cursor: pointer;
+    font-size: 1.5em;
     &:hover {
       text-decoration: underline;
     }
@@ -253,6 +179,10 @@ body {
   background-color: $bg1;
   border-radius: 0;
   color: white;
+  p:first-child {
+    color: #cdd3dd;
+    font-size: 17px;
+  }
 }
 .wrap {
   margin: 5px 0 20px;
