--- a/etp/src/app/dashboard/settings/settings.component.html
+++ b/etp/src/app/dashboard/settings/settings.component.html
@@ -29,11 +29,27 @@
       </div>
     </div>
 
-    <div class="row w-100">
-      <div class="col-md-3">
-        <device-settings></device-settings>
+    <div class="row mx-auto">
+      <div class="col-md-3 my-auto">
+        <div
+          class="card dash-card"
+          (click)="dropdown()"
+          *ngIf="set.isHandset$ | async"
+        >
+          <div class="card-body py-1">
+            <span class="material-icons-round icon">
+              widgets
+            </span>
+            <button mat-button class="drop">See Other Settings</button>
+          </div>
+        </div>
+        <div [class]="(set.isHandset$ | async) ? links : ''">
+          <div *ngFor="let item of options">
+            <device-settings [options]="item"></device-settings>
+          </div>
+        </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 mx-auto my-3">
         <router-outlet></router-outlet>
       </div>
     </div>
