--- a/etp/src/app/dashboard/settings/settings.component.scss
+++ b/etp/src/app/dashboard/settings/settings.component.scss
@@ -8,3 +8,39 @@
 .small {
   color: $sidetext;
 }
+
+.links {
+  opacity: 1;
+  transition: max-height 0.3s;
+}
+.links-hidden {
+  visibility: hidden;
+  max-height: 0;
+  div {
+    box-shadow: none !important;
+  }
+}
+.links-shown {
+  visibility: visible;
+  max-height: 60vh;
+}
+
+.icon {
+  position: absolute;
+  top: 25%;
+  left: 20px;
+  color: white;
+  display: inline-block;
+}
+
+.card-body:hover .icon {
+  color: $shade1;
+}
+
+.drop {
+  padding-left: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 18px;
+  color: $shade2;
+}
