--- a/etp/src/app/auth/authhome/authhome.component.html
+++ b/etp/src/app/auth/authhome/authhome.component.html
@@ -1,19 +1,18 @@
 <div class="row">
   <div
-    class="col-lg-7"
+    class="col-xl-7 col-lg-3 col-md-12"
     style="box-shadow: 1px 0 20px #152138d0;"
-    *ngIf="!(set.isHandset$ | async) && !(set.isTablet$ | async)"
   >
     <div class="auth-side">
       <div class="authbox">
-        <h1 class="title">
+        <h1 class="title mx-5" *ngIf="!(set.isTablet$ | async)">
           <span i18n>Get green energy from the sun </span><br />
           And sell on Energy Trading Platform
         </h1>
       </div>
     </div>
   </div>
-  <div class="col-lg-5 mx-auto" [class.col-lg-12]="set.isTablet$ | async">
+  <div class="col-xl-5 col-lg-9 col-md-12 mx-auto">
     <div class="container">
       <div class="auth-logo">
         <a href="" routerLink="">
