--- a/etp/src/app/auth/authhome/authhome.component.scss
+++ b/etp/src/app/auth/authhome/authhome.component.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  height: 100vh;
   box-shadow: inset 0 0 0 2000px #2f3b52e1;
   // width: 100%;
   margin: 0 -15px;
@@ -11,13 +11,13 @@
 
 .auth-logo {
   width: 20vh;
-  margin: 30px auto;
+  margin: 6vh auto 3vh;
   max-height: 100vh;
 }
 
 .row {
   margin: auto 0 !important;
-  flex-wrap: nowrap;
+  // flex-wrap: nowrap;
 }
 
 .authbox {
@@ -35,4 +35,10 @@
 
 .top {
   margin: 8vh auto;
+}
+
+@media (max-width: 800px) {
+  .auth-side {
+    height: 0 !important;
+  }
 }
