--- a/etp/src/app/auth/complete-registeration/complete-registeration.component.html
+++ b/etp/src/app/auth/complete-registeration/complete-registeration.component.html
@@ -2,13 +2,18 @@
   <h1 class="title" i18n>Few more steps..</h1>
   <div class="container">
     <div class="form">
-      <div class="error">
-        <div *ngIf="errorMsg" class="alert alert-secondary" role="alert">
+      <div class="error d-block w-auto" *ngIf="errorMsg">
+        <div class="alert alert-secondary px-5" role="alert">
           <span class="text-danger" i18n>{{ errorMsg | titlecase }}</span>
         </div>
       </div>
 
-      <form [formGroup]="regForm">
+      <form
+        [formGroup]="regForm"
+        class="d-block"
+        [class.w-50]="!(set.isHandset$ | async)"
+        [class.w-75]="set.isHandset$ | async"
+      >
         <div>
           <div class="form-group">
             <label for="telephone" i18n>Phone Number</label>
