--- a/etp/src/app/auth/signup/signup.component.html
+++ b/etp/src/app/auth/signup/signup.component.html
@@ -31,17 +31,20 @@
           </button>
         </div>
       </div>
-      <div class="error">
-        <div
-          *ngIf="errorMsg && !signedUp"
-          class="alert alert-secondary"
-          role="alert"
-        >
+      <div class="error d-block w-auto" *ngIf="errorMsg && !signedUp">
+        <div class="alert alert-secondary px-5" role="alert">
           <span class="text-danger" i18n>{{ errorMsg | titlecase }}</span>
         </div>
       </div>
 
-      <form action="" [formGroup]="signupForm" *ngIf="!signedUp">
+      <form
+        action=""
+        [formGroup]="signupForm"
+        *ngIf="!signedUp"
+        class="d-block"
+        [class.w-50]="!(set.isHandset$ | async)"
+        [class.w-75]="set.isHandset$ | async"
+      >
         <div formGroupName="register">
           <div class="form-group">
             <label for="email" i18n>Email</label>
@@ -87,13 +90,14 @@
         </button>
       </form>
     </div>
+    <div class="forgot d-block w-75" *ngIf="!signedUp">
+      <p i18n class="font-weight-normal text-secondary">
+        By clicking sign up, you agree to the Solar Bankers User Agreement,
+        Privacy Policy, and Cookie Policy.
+      </p>
+    </div>
   </div>
-  <div class="forgot" *ngIf="!signedUp">
-    <p i18n class="font-weight-normal text-secondary">
-      By clicking sign up, you agree to the Solar Bankers User Agreement,
-      Privacy Policy, and Cookie Policy.
-    </p>
-  </div>
+
   <div class="signup">
     <p i18n>
       Already have <a *ngIf="!signedUp">an</a>
