--- a/etp/src/styles.scss
+++ b/etp/src/styles.scss
@@ -70,9 +70,7 @@ $dark: #20293c;
 * {
   outline: none !important;
 }
-.container {
-  max-width: calc(100vw - 10%) !important;
-}
+
 html,
 body {
   height: 100%;
@@ -104,7 +102,7 @@ body {
   margin: 5vh auto 10px;
   line-height: 1;
   .title {
-    font-size: 4vh;
+    font-size: 1.5rem;
     font-weight: 400;
     color: $darkbg;
     text-align: center;
@@ -115,8 +113,16 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   margin: 5vh 0 10px;
+  width: 100%;
+  .w-50 {
+    width: 65% !important;
+  }
+  form .w-75 {
+    width: 85% !important;
+  }
   label {
     font-weight: 500;
+    font-size: 2vh;
   }
   input,
   textarea {
@@ -125,37 +131,37 @@ body {
     color: white !important;
     font-weight: 300;
     font-size: 16px;
-    border-radius: 4px;
-
+    border-radius: 5px;
     &:focus {
       background-color: $darkbg;
       border: 1px solid $primary !important;
     }
   }
   input {
-    width: 44vh;
-    height: 4.4vh;
+    width: 100%;
+    height: 4.5vh;
   }
 }
 .forgot {
-  margin: auto 30px;
+  margin: 20px auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 
   p {
     cursor: pointer;
+    font-size: 2.1vh;
     margin: 10px auto;
     color: $bg1;
     text-align: center;
-    line-height: 1.2;
+    line-height: 1.28;
     &:hover {
       color: $primary;
     }
   }
 }
 .signup {
-  margin-top: 10vh;
+  margin-top: 8vh;
   text-align: center;
   color: $darkbg;
   span {
@@ -221,13 +227,6 @@ body {
     text-align: right;
     .span {
       display: none;
-    }
-  }
-
-  .forgot {
-    margin: auto 10px !important;
-    p {
-      margin: 4vh 0 !important;
     }
   }
 }
